[gd_scene load_steps=3 format=2]

[ext_resource path="res://img/characters/Monster.png" type="Texture" id=1]
[ext_resource path="res://scn/instances/Monster.gd" type="Script" id=2]

[node name="Monster" type="KinematicBody2D"]
z_index = 1
collision_layer = 4
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -16 )
texture = ExtResource( 1 )

[node name="Collision" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -10, 0, -14, -4, -14, -14, -10, -20, 0, -24, 10, -20, 12, -14, 12, 0 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="RayFD" type="RayCast2D" parent="."]
position = Vector2( -12, -2 )
enabled = true
cast_to = Vector2( 0, 4 )

[node name="RayBD" type="RayCast2D" parent="."]
position = Vector2( 12, -2 )
enabled = true
cast_to = Vector2( 0, 4 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
